# variables

./: LICENSE  README.md  io.github.variablesapp.variables.yml  meson.build
.github/workflows/: main.yml
data/: variables.desktop.in.in
po/: POTFILES
src/: Application.vala  MainWindow.vala  meson.build
src/Constants/: Config.vala
src/Enums/: EditableFieldChangeType.vala
src/Helpers/: Debouncer.vala
src/Model/: Template.vala  Variable.vala
src/Services/: DatabaseService.vala  OutputService.vala
src/View/: MainWindow.vala  TemplateEditor.vala  TemplateEditorView.vala  TemplateView.vala  TemplatesView.vala  VariablesView.vala
src/ViewModel/: MainViewModel.vala  TemplateEditorViewModel.vala  TemplateViewModel.vala  TemplatesViewModel.vala  VariablesViewModel.vala
src/Widgets/: EditableField.vala
src/db/: DatabaseTable.vala
