app_dependencies = [
    global_dependencies,
    dependency('gtk4'),
    dependency('granite-7'),
    dependency('template-glib-1.0'),
    dependency('vadi-0.0')
]

app_sources = [
    files(
        'Application.vala', 
        'View/MainWindow.vala',
        'Model/Template.vala',
        'Model/Variable.vala',
        'ViewModel/MainViewModel.vala',
        'ViewModel/TemplatesViewModel.vala',
        'ViewModel/VariablesViewModel.vala',
        'ViewModel/TemplateEditorViewModel.vala',
        'View/TemplateEditorView.vala',
        'View/TemplatesView.vala',
        'View/VariablesView.vala',
        'Widgets/EditableField.vala'
    ),
    config_file
]
